--- a/mappedin-mac/package.json
+++ b/mappedin-mac/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "@mappedin/mappedin-js": "^5.40.1"
   }
 }
