--- a/mappedin-mac/package.json
+++ b/mappedin-mac/package.json
@@ -13,6 +13,6 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
-    "@mappedin/mappedin-js": "^5.40.1"
+    "@mappedin/mappedin-js": "^6.0.1-alpha.36"
   }
 }
