--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "My app deployed on Render.com",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "tsc",
+    "dev": "tsc && node dist/main.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "typescript": "^5.5.4"
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0"
   }
 }
