--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
-    name: my-app
+    name: mainmap
     env: node
+    buildCommand: npm run build
+    startCommand: npm start
     plan: free
-    buildCommand: "npm install"
-    startCommand: "npm start"
+    region: virginia
