--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
         "target": "ES6",
         "module": "commonjs",
         "outDir": "./dist",
-        "rootDir": "./",
+        "rootDir": "./src",
         "strict": true
     },
     "include": [
-        "main.ts"
+        "src/main.ts"
     ]
 }
