--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
-        "target": "ES6",
-        "module": "commonjs",
+        "target": "es6",
+        "module": "es6",
         "outDir": "./dist",
         "rootDir": "./src",
-        "strict": true
+        "strict": true,
+        "esModuleInterop": true
     },
     "include": [
-        "src/main.ts"
+        "src/**/*"
     ]
 }
