--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,12 @@
         "outDir": "./dist",
         "rootDir": "./src",
         "strict": true,
-        "esModuleInterop": true
-    },
-    "include": [
-        "src/**/*"
-    ]
+        "esModuleInterop": true,
+        "baseUrl": "./",
+        "paths": {
+            "@mappedin/*": [
+                "node_modules/@mappedin/*"
+            ]
+        }
+    }
 }
