--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "my-app",
+  "name": "getting-started",
   "version": "1.0.0",
-  "description": "My app deployed on Render.com",
-  "main": "",
+  "description": "",
+  "main": "index.html",
   "scripts": {
-    "start": "node start",
-    "build": "tsc",
-    "dev": "tsc && node /scr/main.ts"
+    "start": "parcel index.html --open",
+    "build": "parcel build index.html"
   },
   "dependencies": {
     "@mappedin/mappedin-js": "^5.40.1",
-    "express": "^4.19.2"
+    "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
-    "typescript": "^5.5.4"
-  }
+    "typescript": "5.5.4"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.13.8"
+  },
+  "keywords": []
 }
