--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "start": "ts-node /src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@mappedin/mappedin-js": "^5.40.1",
