--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "ts-node /src/index.ts",
+    "start": "npm run build",
     "build": "tsc"
   },
   "dependencies": {
-    "@mappedin/mappedin-js": "^5.40.1",
-    "parcel-bundler": "^1.12.5"
+    "@mappedin/mappedin-js": "^6.0.1-alpha.36"
   },
   "devDependencies": {
-    "typescript": "5.5.4"
-  },
-  "resolutions": {
-    "@babel/preset-env": "7.13.8"
+    "typescript": "^5.5.4"
   },
   "keywords": []
 }
