--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,18 @@
 {
     "compilerOptions": {
+        "target": "ES6",
+        "module": "ESNext",
+        "moduleResolution": "node",
         "strict": true,
-        "module": "commonjs",
-        "jsx": "preserve",
         "esModuleInterop": true,
-        "sourceMap": true,
-        "allowJs": true,
-        "lib": [
-            "es6",
-            "dom"
-        ],
-        "rootDir": "src",
-        "moduleResolution": "node"
-    }
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "outDir": "./dist"
+    },
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
