--- a/Map1/package.json
+++ b/Map1/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc"
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "typescript": "^5.5.3",
