--- a/Map1/package.json
+++ b/Map1/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npx serve dist"
   },
   "devDependencies": {
     "typescript": "^5.5.3",
