--- a/Map1/package.json
+++ b/Map1/package.json
@@ -4,16 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "start": "npx serve dist"
+    "build": "tsc",
+    "start": "serve ."
   },
   "devDependencies": {
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
   },
   "dependencies": {
-    "@mappedin/mappedin-js": "^6.0.1-alpha.36"
+    "@mappedin/mappedin-js": "^6.0.1-alpha.36",
+    "serve": "^14.2.3"
   }
 }
