--- a/Map1/package.json
+++ b/Map1/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "serve ."
+    "build": "npm run build",
+    "start": "npm run dev"
   },
   "devDependencies": {
     "typescript": "^5.5.3",
