--- a/Map1/package.json
+++ b/Map1/package.json
@@ -3,10 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "build": "yarn build",
-    "start": "yarn start"
-  },
+  "scripts": {},
   "devDependencies": {
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
