--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@mappedin/mappedin-js": "^1.0.0"
+    "@mappedin/mappedin-js": "^6.0.1-alpha.37"
   },
   "devDependencies": {
-    "typescript": "^4.0.0",
-    "vite": "^3.0.0"
+    "typescript": "^4.9.5",
+    "vite": "^3.2.10"
   }
 }
