--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "start": "vite preview"
   },
   "dependencies": {
     "@mappedin/mappedin-js": "^6.0.1-alpha.37"
