--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "mappedin-live-map",
   "version": "1.0.0",
   "scripts": {
-    "dev": "node",
-    "build": "npm run build",
-    "start": "tsc"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@mappedin/mappedin-js": "^6.0.1-alpha.37"
   },
   "devDependencies": {
     "@types/node": "^22.4.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "typescript": "^4.9.5",
     "vite": "^3.2.10"
   }
