--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npm run build",
+    "preview": "npm run dev"
   },
   "dependencies": {
     "@mappedin/mappedin-js": "^6.0.1-alpha.37"
