--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build",
-    "preview": "npm run dev"
+    "build": "vite build",
+    "start": "vite preview"
   },
   "dependencies": {
     "@mappedin/mappedin-js": "^6.0.1-alpha.37"
   },
   "devDependencies": {
-    "@types/node": "^22.4.1",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "typescript": "^4.9.5",
     "vite": "^3.2.10"
   }
