--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "node",
-    "build": "",
+    "build": "npm run build",
     "start": ""
   },
   "dependencies": {
