--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "mappedin-live-map",
   "version": "1.0.0",
   "scripts": {
-    "dev": "node",
-    "build": "npm run build",
-    "start": ""
+    "build": "vite build",
+    "start": "serve dist -l $PORT"
   },
   "dependencies": {
     "@mappedin/mappedin-js": "^6.0.1-alpha.37"
